# pollyML

./: .gitignore  CMakeLists.txt  LLVMBuild.txt
cmake/: pollyML_macros.cmake
include/pollyML/: Constants.h  JsonExporter.h  Options.h  ProfilingCodegen.h  ProfilingInitializer.h  RegisterPasses.h  ScopGraphInfo.h  ScopProfiling.h
lib/: CMakeLists.txt  JsonExporter.cpp  PollyML.cpp  ProfilingCodegen.cpp  ProfilingInitializer.cpp  RegisterPasses.cpp  ScopGraphInfo.cpp  ScopProfiling.cpp
optimizer/: CMakeLists.txt
optimizer/include/polly_ml_optimizer/: graph.hpp  isl_tools.hpp  scop.hpp  utils.hpp
optimizer/include/polly_ml_optimizer/exchange/: json_exchange.hpp
optimizer/lib/: CMakeLists.txt  scop.cpp
optimizer/lib/exchange/: json_exchange.cpp
optimizer/unittests/: CMakeLists.txt
optimizer/unittests/data/exchange/: kernel_2mm___%.split---%45.scopson
optimizer/unittests/exchange/: test_json_exchange.cpp
profiler/: CMakeLists.txt
profiler/include/scop_profiler/: Papi.h  Statistics.h  Timers.h  Utils.h
profiler/lib/: CMakeLists.txt  Papi.cpp  Timers.cpp  Utils.cpp  profiling.cpp
profiler/src/: Statistics.h  Timers.h  profiling.cpp
profiler/unittests/: CMakeLists.txt  StatisticsTest.cpp
